--- a/recipes/chocolate-banana-milkshake.html
+++ b/recipes/chocolate-banana-milkshake.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Odin Recipes</h1>
 
-    <a href="./recipes/chocolate-banana-milkshake.html">Chocolate Banana Milkshake</a>
+<body>
+    <h1>Chocolate Banana Milkshake</h1>
 </body>
+
 </html>
