Iteration 3 - Develop first recipe
1. Added an image representing the recipe.
2. Added a brief description of the recipe.
3. Added the ingredients of the recipe.
4. Added the steps to the recipe.

--- a/recipes/chocolate-banana-milkshake.html
+++ b/recipes/chocolate-banana-milkshake.html
@@ -9,6 +9,34 @@
 
 <body>
     <h1>Chocolate Banana Milkshake</h1>
+    <img src="../images/recipes/chocolate-banana-milkshake.jpg" alt="A Delicious Chocolate Banana Milkshake">
+    <h2>Description</h2>
+    <p>A chocolate banana milkshake is a delightful fusion of rich cocoa goodness and the natural sweetness of ripe
+        bananas. It's a classic favorite among dessert lovers and a perfect indulgence on a hot summer day. The creamy
+        texture of the milkshake is achieved by blending together ice-cold milk, velvety chocolate syrup, and ripe
+        bananas, resulting in a luscious and satisfying drink. The chocolate adds a decadent depth of flavor while the
+        bananas provide a subtle fruity undertone, creating a harmonious blend of sweet and slightly bitter notes.
+        Topped with a dollop of whipped cream or a sprinkle of chocolate shavings, a chocolate banana milkshake is the
+        ultimate treat for those with a sweet tooth.</p>
+    <p>What makes a chocolate banana milkshake even more appealing is its versatility. You can customize it to your
+        taste by adding a scoop of vanilla ice cream for extra creaminess or a dash of cinnamon for a hint of spice.
+        Whether enjoyed as a quick snack or a dessert after a hearty meal, this timeless beverage never fails to satisfy
+        cravings and bring smiles to faces.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 banana, frozen and chunked</li>
+        <li>6 tablespoons powdered chocolate-flavored malt drink mix (such as Ovaltine®)</li>
+        <li>1 cup milk</li>
+        <li>2 cups vanilla ice cream</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Place the frozen banana chunks, powdered drink mix, milk, and vanilla ice cream into a blender.</li>
+        <li>Blend until smooth and creamy.</li>
+        <li>Pour into large glasses</li>
+    </ol>
 </body>
 
 </html>
