Add an image and new recipe

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/chocolate-banana-milkshake.html">Chocolate Banana Milkshake</a>
+    <p><img src="./images/index/cooking_icon.png" alt="cooking illustration"></p>
+
+    <ul>
+        <li> <a href="./recipes/chocolate-banana-milkshake.html">Chocolate Banana Milkshake</a></li>
+        <li><a href="./recipes/fried-eggs.html">Fried Eggs</a></li>
+    </ul>
 </body>
+
 </html>
